<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Peer-to-Peer Postal</string>
    <string name="title_page_detail">Page Detail</string>
    <string name="label_name">Full Name</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_register">Register</string>
    <string name="label_linkreg">New to P2P Postal? Register Here.</string>
    <string name="label_linklogin">Already have an account? Login Here.</string>
    <string name="imgFooterDesc">Footer Image</string>
    <string name="imgLogoDesc">Logo Image</string>
</resources>