<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout 
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content" 
  		android:background="@layout/background">
  		
  		<!--  Header  Starts-->
  		<LinearLayout android:id="@+id/header"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:paddingTop="5dip"
  				android:paddingBottom="5dip">
  				<!-- Logo Start-->
  				<ImageView android:src="@drawable/p2pps"
  							android:layout_width="wrap_content"
  							android:layout_height="wrap_content"
  							android:layout_marginLeft="10dip"/>
  				<!-- Logo Ends -->
  		</LinearLayout>
  		<!--  Header Ends --> 
  		<!-- Footer Start -->
  		<LinearLayout android:id="@+id/footer"
  				android:layout_width="fill_parent"
  				android:layout_height="90dip"
  				android:background="@drawable/fback"
  				android:layout_alignParentBottom="true">
				<ImageView android:src="@drawable/footer"
				    		android:scaleType="fitStart"
				    		android:layout_width="fill_parent"
  							android:layout_height="90dip"/>
  		</LinearLayout>
  		<!-- Footer Ends --> 
  		
  		<!-- Registration Form -->
		<LinearLayout
		  android:orientation="vertical"
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  android:padding="10dip"
		  android:layout_below="@id/header">
		  <!-- Full Name Label -->
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:text="@string/label_name"/>
		  <EditText android:id="@+id/RegName" 
		        android:inputType="textPersonName"
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="5dip"
		  		android:singleLine="true"
		  		android:layout_marginBottom="20dip"/>
		  <!--  Email Label -->
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:text="@string/label_email"/>
		  <EditText android:id="@+id/RegEmail" 
		        android:inputType="textEmailAddress"  
		        android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="5dip"
		  		android:layout_marginBottom="20dip"
		  		android:singleLine="true"/>
		  <!-- Password Label -->
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:text="@string/label_password"/>
		  <EditText android:id="@+id/RegPassword" 
				android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="5dip"
		  		android:singleLine="true"
		  		android:inputType="textPassword"  />
		  <!-- Register Button -->		
		  <Button android:id="@+id/btnRegister" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="10dip"
		  		android:text="@string/label_register"/>
		  <!-- Link to Login Screen -->
		  <TextView android:id="@+id/link_to_login" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="40dip"
		  		android:layout_marginBottom="40dip"
		  		android:text="@string/label_linklogin"
		  		android:gravity="center"
		  		android:textSize="20sp"
		  		android:textColor="#025f7c"/>
		    
		</LinearLayout>
  		<!-- Registration Form Ends -->
  		
  		
  </RelativeLayout>
</ScrollView>
